[package]
name = "carcassonne-server"
version = "0.1.0"
authors = ["Rossi Lorenzo <snowycoder@gmail.com>", "Rutayisire Lorenzo <lorenzorutayisire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7"
actix = "0.9"
actix-web = "2.0"
actix-web-actors = "2.0"
actix-rt = "1.0"
serde = { version = "=1.0.106", features = ["derive"] }
serde_json = "1.0.95"
rand = "0.7"
base64 = "0.12"


[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3"

